feature(datastore): return column hints for query and scan (#2103)